Both a `--explicit-csu`/`-S` command-line and `explicit-ecsu` set option have
been added that set which type keywords `enum`, `class`, `struct`, or `union`,
are included explicitly in C++ declarations.  The default is `struct` and
`union` only, so:

    c++decl> declare ps as pointer to struct S
    struct S *ps;
    c++decl> declare pt as pointer to class T
    T *pt;


* Changes in Cdecl 11.2

** More C++ cast checks
`const_cast`, `dynamic_cast`, and `reinterpret_cast` now perform additional
checks.

** Fixed casting to `void`
Fixed the ability to cast to `void`.

** Fixed autocompletion crash
A crash for autocompletion of help options has been fixed.


* Changes in Cdecl 11.1

** Multiple declarations
The `declare` command can now accept multiple names like:

    cdecl> declare p, q as pointer to int
    int *p, *q;

** Digraph & Trigraph output
Digraphs and trigraphs are no longer emitted in a language in which they aren't
supported.

** Help options
The `help` command now also acceptions `options`.  Help for options is now
printed separately.

** Help autocompletion
Help options are now autocompletable.

** Fixed multiple nested declarations crash
Explaining a declaration like:

    explain int (*p), (*q)

is now fixed.


* Changes in Cdecl 11.0

** K&R C function returning `struct`
Now correctly forbidding functions returning `struct` in K&R C.

** Digraphs before C95
Either using a digraph or setting the digraphs option in a language before C95
now prints a warning that digraphs are not supported until C95.

** Trigraphs in K&R C
Either using a trigraph or setting the trigraphs option in K&R C now prints a
warning that trigraphs are not supported until C89.

** Optional `()` for `destructor`
Declaring a destructor in English now optionally allows `()`.

** C++23
C++23 is both now allowed for and the default C++ version.  However, there are
as of yet no differences with respect to declarations between it and C++20.

** `inline namespace` command