@@ -1,0 +1,1 @@
+declare a as array 4 of int
