@@ -1,0 +1,1 @@
+cdecl @ @ @ explain int (a)[4] @ 0
